# WasmScout

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
docs/: index.html  main.js
lib/: BUILD  game.cc  game.h  game_test.cc  hello.cc  hello.h  hello_main.cc  hello_test.cc  mcts.cc  mcts.h  mcts_test.cc  model.h  wasm.cc  wasm.h  wasm_main.cc  wasm_test.cc
testdata/: convert.py  model.h  mul_1.ort  nine_pebbles.onnx  nine_pebbles.ort
web/: index.html  main.js
